# chinese-converter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml  run_test.yaml
chinese_converter/: __init__.py  bigram.json  monogram.json  simplified.txt  traditional.txt
test/: test_translator.py
